feature: push updates to production functionality

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+    }
+  </style>
+
   <meta charset="utf-8">
   <title>Matas Management</title>
   <base href="/">
